--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,7 @@
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 
 @custom-variant dark (&:where(.dark, .dark *));
-
-html,
-body {
-  height: 100%;
-}
 
 .img-spinner {
   width: 48px;
